--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="library/p5.js"></script>
     <script src="controller.js"></script>
     <!-- Importo una fuente para el texto -->
+    <link rel="icon" type="image/x-icon" href="/imagenes/ico.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;700&display=swap" rel="stylesheet">
